Fixed mentor image alignment

--- a/src/stylesheets/homePage/main/_team.scss
+++ b/src/stylesheets/homePage/main/_team.scss
@@ -14,9 +14,8 @@
 		width: 200px;
 
 		img {
-			border-radius: 100%;
 			width: 100%;
-			padding: 10px 0;
+			border-radius: 100%;
 		}
 
 		p {
